# Catkin-workspace

./: CMakeLists.txt  README.md  compile_commands.json  package.xml
Testing/: TAG
atomic_configure/: local_setup.sh
catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  setup_cached.sh
config/: TAM.yaml  thruster_manager.yaml
gtest/: Makefile
launch/: box_spawn.launch  pid_controller.launch  spawn_rov_tms.launch  start_thruster_manager.launch  start_thruster_manager_tms.launch  start_thruster_managers.launch
meshes/: eHD_3.0_with_Epoxy_STEP_Public.stl  rov_collision.stl  rov_visual.dae  tms_collision.stl  tms_visual.dae
my_robot_controller/: package.xml
my_robot_controller/launch/: car.launch  car_rviz.launch  display_box.launch  lidar_box.launch
my_robot_controller/rviz/: box.rviz  car.rviz  lidar_box.rviz
my_robot_controller/scripts/: car_circle.py  car_move.py  depth_c_to_pc.py  draw_circle.py  ls_to_pc.py  move_box.py  my_first_node.py  pointcloud_data_conv.py  pose_subscriber.py  tms_controller.py  turtle_controller.py
my_robot_controller/urdf/: box.urdf  car.urdf  new_box.urdf
robots/: rov_2d_sonar.xacro  rov_3d_sonar.xacro  tms_2d_sonar.xacro  tms_3d_sonar.xacro  tms_second.xacro  tms_threed.xacro
rov_control/: CMakeLists.txt  package.xml
rviz/: tms_sonar.rviz
scripts/: ls_two_pc.py  ls_two_pc_rov.py  ls_two_pc_tms.py  opencv_camera_calibration.py  opencv_estimate_pose_single_maker.py  opencv_video.py  pcdata_conv_second.py  pointcloud_data_conv.py  pointcloud_data_conv_rov.py  pointcloud_data_conv_test.py  (+18 more)
(+136 files in other folders)
