<?xml version="1.0"?>
<package format="2">
  <name>my_robot_controller</name>
  <version>0.0.0</version>
  <description>The my_robot_controller package</description>
  <author email="jane.doe@example.com">Jane Doe</author>
  <maintainer email="johnny@todo.todo">johnny</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <depend>gazebo_ros</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>urdf</depend>
  
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>teleop_twist_keyboard</depend>


<!-- trenger kanskje for å konvertere laserscan til pointcloud -->
  <depend>sesnor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>math</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
